fixed some word spacing a bit

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font: 15px arial, sans-serif;
 }
 
 /* header css */
